# dotfiles

./: Cargo.toml  _build.rs  build.rs  install.sh
dotfiles/git/: gitconfig
dotfiles/nvim/: .netrwhist  init.vim
dotfiles/nvim/colors/: pika.vim
dotfiles/nvim/ftplugin/: python.vim  tex.vim
dotfiles/tilix/: tilix.dconf
dotfiles/tmux/: tmux.conf
dotfiles/zsh/: zshrc
src/: common.rs  common_path.rs  home_path.rs  macro_utils.rs  main.rs  me.rs  prompt.rs  runner.rs  utils.rs
src/git/: mod.rs
src/neovim/: mod.rs
src/ops/: context.rs  git.rs  mod.rs  path.rs
src/sub/: git.rs  mod.rs  neovim.rs  tilix.rs  tmux.rs  zsh.rs
src/tilix/: mod.rs
src/tmux/: mod.rs
src/utils/: mod.rs  path.rs
src/zsh/: mod.rs
