[package]
authors = ["Meteor <bobogei81123@gmail.com>"]
name = "dotfiles"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
git2 = "0.8.0"
lazy_static = "1.2.0"
slog = "2.4.1"
slog-async = "2.3.0"
slog-scope = "4.1.1"
slog-term = "2.4.0"
rprompt = "1.0.3"
colored = "1.7.0"
